--- a/app/views/accredited-body.html
+++ b/app/views/accredited-body.html
@@ -55,10 +55,10 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <div class="status-box">
-        <h2 class="govuk-heading-m govuk-!-margin-top-2">
+        {# <h2 class="govuk-heading-m govuk-!-margin-top-2">
           <a href="/notifications">Notifications</a>
         </h2>
-        <p>Recieve notifications about courses that you’re the accredited body for.</p>
+        <p>Recieve notifications about courses that you’re the accredited body for.</p> #}
         <h2 class="govuk-heading-m">Download</h2>
         <p>Export all the courses you’re the accredited body for.</p>
         <p class="">
