--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -2,7 +2,7 @@
 {% set title = 'Manage: Updates to courses as an accredited body' %}
 {% set navActive = 'notifications' %}
 {% block pageTitle %}{{ title }}{% endblock %}
-{% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
+{# {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %} #}
 
 {% block content %}
 <div class="govuk-grid-row">
@@ -24,7 +24,7 @@
 
         {% set fields = [
           {
-            name: "Yes, send notificatons to email@domain.com",
+            name: "Yes, send notificatons to pgce.admissions@beds.ac.uk",
             value: "get-notifications",
             checked: checked("notifications", "get-notifications")
           },
