--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -42,15 +42,21 @@
 {% endblock %}
 
 {% block header %}
-  {% set serviceUrl %}{% if value('rolled-over') %}/cycles{% else %}/{% endif %}{% endset %}
-
   {{ govukHeader({
     homepageUrl: '#',
     productName: serviceName,
-    serviceUrl: serviceUrl,
+    serviceUrl: "/cycles" if value("rolled-over") else "/",
     containerClasses: "govuk-width-container",
     navigationClasses: "govuk-header__navigation--end",
     navigation: [{
+      href: "/notifications",
+      text: "Notifications",
+      active: true if (navActive == "notifications")
+    }, {
+      href: "/users",
+      text: "Users",
+      active: true if (navActive == "users")
+    }, {
       href: "#",
       text: "Sign out (Jane Doe)"
     }]
