Users iteration added

--- a/app/views/users.html
+++ b/app/views/users.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block pageTitle %}Users{% endblock %}
+{% set title = 'Users' %}
+{% block pageTitle %}{{ title }}{% endblock %}
 {% set navActive = 'users' %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
@@ -17,30 +18,31 @@
     {% endif %}
   {% endset %}
 
-  {{ macros.orgHeading('Users', message) }}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>These users currently have access to this account. They can manage all your course and organisation details, including publishing, closing and withdrawing courses.</p>
       <h1 class="govuk-heading-xl">{{title}}</h1>
+      <p>These users currently have access to this account. They can manage all your course and organisation details, including publishing, closing and withdrawing courses.</p>
       {{govukButton({
         text: 'Invite user',
         href: '/users/invite-user'
       })}}
       <div class="app-application-card">
-        <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Ross Anderson</h2>
-        <p class="govuk-!-margin-bottom-3">ross.anderson@ucl.ac.uk </p>
-        <a href="/users/delete-user" class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-2 govuk-link--no-visited-state">Delete user</a>
+        <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
+          <a class="govuk-link govuk-link--no-visited-state" href="/users/show">Ross Anderson</a>
+        </h2>
+        <p class="govuk-!-margin-bottom-0">ross.anderson@address.uk</p>
       </div>
       <div class="app-application-card">
-          <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Hermione Granger</h2>
-          <p class="govuk-!-margin-bottom-3">hermione.granger@ucl.ac.uk </p>
-          <a href="/users/delete-user" class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-2 govuk-link--no-visited-state">Delete user</a>
+          <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
+            <a class="govuk-link govuk-link--no-visited-state" href="#">Hermione Granger</a>
+          </h2>
+          <p class="govuk-!-margin-bottom-0">hermione.granger@address.uk</p>
       </div>
       <div class="app-application-card">
-        <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Billy Boyo</h2>
-        <p class="govuk-!-margin-bottom-3">billy.boyo@ucl.ac.uk</p>
-        <a href="/users/delete-user" class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-2 govuk-link--no-visited-state">Delete user</a>
+        <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
+          <a class="govuk-link govuk-link--no-visited-state" href="#">Billy Boyo</a>
+        </h2>
+        <p class="govuk-!-margin-bottom-0">billy.boyo@address.uk</p>
       </div>
     </div>
   </div>
