--- a/app/assets/sass/components/_application-card.scss
+++ b/app/assets/sass/components/_application-card.scss
@@ -2,6 +2,10 @@
   border-bottom: 1px solid #b1b4b6;
   margin-bottom: 15px;
   padding-bottom: 15px;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 .app-application-card:first-of-type {
