--- a/app/views/users/delete-user.html
+++ b/app/views/users/delete-user.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
-{% block pageTitle %}Users{% endblock %}
-{% block backLink %}{{ macros.backLink('/cycles' if data['rolled-over'] else '/users') }}{% endblock %}
+{% block pageTitle %}-{% endblock %}
+{% block backLink %}{{ macros.backLink('/users/show') }}{% endblock %}
 
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        <span class="govuk-caption-xl">Firstname Lastname</span>
+        <span class="govuk-caption-xl">Ross Anderson</span>
         Are you sure you want to delete this user’s account?
       </h1>
       {# {{ govukButton({
