--- a/app/views/users.html
+++ b/app/views/users.html
@@ -22,7 +22,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>These users currently have access to this account. They can manage all your course and organisation details, including publishing, closing and withdrawing courses.</p>
+      <p>These users currently have access to this account. They can manage all your courses and organisation details, including publishing, closing and withdrawing courses.</p>
       {{govukButton({
         text: 'Invite user',
         href: '/users/invite-user'
