Add email copy to radio button

--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -24,7 +24,7 @@
 
         {% set fields = [
           {
-            name: "Yes, send notificatons to pgce.admissions@beds.ac.uk",
+            name: "Yes, send email notificatons to pgce.admissions@beds.ac.uk",
             value: "get-notifications",
             checked: checked("notifications", "get-notifications")
           },
