--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -105,12 +105,22 @@
       </ul>
     </div>
     <div class="govuk-grid-column-one-third">
-      {% if not data['rolled-over'] %}
+      {% if not data["rolled-over"] %}
         <div class="status-box">
           {# <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="/notifications">Notifications</a>
+            <a href="/notifications">Email notifications</a>
           </h2>
-          <p>Recieve notifications about courses that you’re the accredited body for.</p>
+          <p>Get email notifications about your courses</p>
+
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+            <a href="/users/users">Users</a>
+          </h2>
+          <p>See who has access to this account and invite new users.</p> #}
+
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+            <a href="/ucas/apply-preferences">UCAS contacts</a>
+          </h2>
+          <p>Update or request UCAS contact details.</p>
 
           <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
             <a href="/users/users">Users</a>
