Set users to active in nav

--- a/app/views/users/delete-user.html
+++ b/app/views/users/delete-user.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block pageTitle %}-{% endblock %}
+{% set navActive = 'users' %}
 {% block backLink %}{{ macros.backLink('/users/show') }}{% endblock %}
 
 {% block content %}
