--- a/app/views/users/show.html
+++ b/app/views/users/show.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% set title = 'Ross Anderson' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% set navActive = 'users' %}
 {% block backLink %}{{ macros.backLink('/users') }}{% endblock %}
 
 {% block content %}
