--- a/app/views/new-features-for-accredited-bodies.html
+++ b/app/views/new-features-for-accredited-bodies.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'New features' %}
+{% set title = 'Get notifications about your courses' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block beforeContent %}
 {% endblock %}
@@ -11,28 +11,22 @@
 			<h1 class="govuk-heading-xl">
 				{{ title }}
 			</h1>
-			<p>We’ve recently added two new features to further support accredited bodies.</p>
-			<h2 class="govuk-heading-m">
-				Courses as an accredited body
-			</h2>
-			<p>In this section, you can see:</p>
+			<p>You can now sign up for email notifications about courses that you’re the accredited body for.</p>
+			<p>We’ll tell you when a training provider:</p>
 			<ul class="govuk-list govuk-list--bullet">
-				<li>who lists you as their accredited body</li>
-				<li>which courses you’re the accredited body for</li>
+				<li>adds a new course</li>
+				<li>makes a change to an existing course</li>
 			</ul>
-			<a href="/accredited-body" class="govuk-body">View this feature</a>
-			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-			<h2 class="govuk-heading-m">
-				Notifications
-			</h2>
-			<p>Receive notifications about courses that you’re the accredited body for. You’ll be told about any new courses added and updated about changes to existing courses.</p> 
-			<a href="/notifications" class="govuk-body">Subscribe to notifications</a>
 		</div>
 	</div>
 </div>
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
-		<a href="/" role="button" draggable="false" class="govuk-button govuk-!-margin-top-8">Continue</a>
+		<a href="/notifications" role="button" draggable="false" class="govuk-button govuk-!-margin-top-4">Sign up for notifications</a>
+	</div>
+	<div class="govuk-grid-column-two-thirds">
+		<p>or</p>
+		<a href="/" class="govuk-body govuk-link">Continue to your courses without signing up</a>
 	</div>
 </div>
 {% endblock %}
