Add indicator to where placement schools details are

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -53,6 +53,7 @@
           <ul class="govuk-list govuk-list--bullet">
             <li>write about your organisation</li>
             <li>set your contact details</li>
+            <li>tell us about your placement schools</li>
             <li>publish this information on all course pages</li>
           </ul>
         </div>
