--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -223,6 +223,51 @@
 {% endif %}
 <div class="govuk-summary-list__row">
   <dt class="govuk-summary-list__key">
+    Application path
+  </dt>
+  <dd class="govuk-summary-list__value">
+    Apply/UCAS
+  </dd>
+  {% if showChangeLinks %}
+  <dd class="govuk-summary-list__actions">
+    <a href="/new/{{ code }}/applications-path?change=applications-path">
+      Change<span class="govuk-visually-hidden"> application path</span>
+    </a>
+  </dd>
+  {% endif %}
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    Application path
+  </dt>
+  <dd class="govuk-summary-list__value">
+    Apply only
+  </dd>
+  {% if showChangeLinks %}
+  <dd class="govuk-summary-list__actions">
+    <a href="/new/{{ code }}/applications-path?change=applications-path">
+      Change<span class="govuk-visually-hidden"> application path</span>
+    </a>
+  </dd>
+  {% endif %}
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    Application route
+  </dt>
+  <dd class="govuk-summary-list__value">
+    Applications should be made directly to the college of your choice
+  </dd>
+  {% if showChangeLinks %}
+  <dd class="govuk-summary-list__actions">
+    <a href="/new/{{ code }}/applications-path?change=applications-path">
+      Change<span class="govuk-visually-hidden"> application path</span>
+    </a>
+  </dd>
+  {% endif %}
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Applications open
   </dt>
   <dd class="govuk-summary-list__value">
