--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -19,8 +19,8 @@
         <div class="govuk-!-margin-bottom-6">
           <p>You can sign up for email notifications about these courses. We’ll tell you when a training provider:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>adds a new course</li>
-            <li>makes a change to an existing course</li>
+            <li>publishes a new course on Find postgraduate teacher training</li>
+				    <li>makes a change to an existing course</li>
           </ul>
         </div>
 
