--- a/app/views/new-features-for-accredited-bodies.html
+++ b/app/views/new-features-for-accredited-bodies.html
@@ -14,7 +14,7 @@
 			<p>You can now sign up for email notifications about courses that you’re the accredited body for.</p>
 			<p>We’ll tell you when a training provider:</p>
 			<ul class="govuk-list govuk-list--bullet">
-				<li>adds a new course</li>
+				<li>publishes a new course on Find postgraduate teacher training</li>
 				<li>makes a change to an existing course</li>
 			</ul>
 		</div>
