Example alert and copy updates

--- a/app/views/notifications-multi-org.html
+++ b/app/views/notifications-multi-org.html
@@ -11,15 +11,17 @@
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
             <span class="govuk-caption-xl">Manage notifications</span>
-            Changes to your courses as an accredited body
+            Changes to courses
           </h1>
         </legend>
 
         <div class="govuk-!-margin-bottom-6">
-          <p>You can sign up for email notifications about these courses. We’ll tell you when a training provider:</p>
+          <p>You can sign up for email notifications about changes to courses you accredit. We’ll tell you when a training provider:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>publishes a new course on Find postgraduate teacher training</li>
 				    <li>makes a change to an existing course</li>
+				    <li>withdraws a course</li>
+				    <li>confirms a course has no vacancies</li>
           </ul>
         </div>
 
@@ -27,7 +29,7 @@
           name: "notifications",
           fieldset: {
             legend: {
-              text: "Which organisations would you like to recieve email notifications for?",
+              text: "Which organisations would you like to recieve email notifications about?",
               classes: "govuk-fieldset__legend--l govuk-!-margin-bottom-6"
             }
           },
