--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -14,6 +14,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/map";
 @import "components/notification-banner";
 @import "components/application-card";
+@import "components/success-summary";
 
 // Utilities
 @import "utilities/overrides";
