--- a/app/views/notifications-multi-org.html
+++ b/app/views/notifications-multi-org.html
@@ -10,13 +10,13 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
-            <span class="govuk-caption-xl">Manage notifications</span>
+            <span class="govuk-caption-xl">Notifications for accredited bodies</span>
             Changes to courses
           </h1>
         </legend>
 
         <div class="govuk-!-margin-bottom-6">
-          <p>You can sign up for email notifications about changes to courses you accredit. We’ll tell you when a training provider:</p>
+          <p>We'll tell you when a training provider:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>publishes a new course on Find postgraduate teacher training</li>
 				    <li>makes a change to an existing course</li>
