--- a/app/views/notifications-multi-org.html
+++ b/app/views/notifications-multi-org.html
@@ -29,7 +29,7 @@
           name: "notifications",
           fieldset: {
             legend: {
-              text: "Which organisations would you like to recieve email notifications about?",
+              text: "Which organisations would you like to receive email notifications about?",
               classes: "govuk-fieldset__legend--l govuk-!-margin-bottom-6"
             }
           },
