--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -26,11 +26,11 @@
           </ul>
         </div>
 
-        <h2 class="govuk-heading-l">Would you like to be notified?</h2>
+        <h2 class="govuk-heading-l">Would you like would you like to receive email notifications?</h2>
 
         {% set fields = [
           {
-            name: "Yes, send me email notifications",
+            name: "Yes, send me notifications",
             value: "get-notifications",
             checked: checked("notifications", "get-notifications")
           },
