--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -22,7 +22,7 @@
             <li>publishes a new course on Find postgraduate teacher training</li>
 				    <li>makes a change to an existing course</li>
 				    <li>withdraws a course</li>
-				    <li>changes a course's vacancy status</li>
+				    <li>changes the vacancy status of a course</li>
           </ul>
         </div>
 
