--- a/app/views/organisation-notification-enabled.html
+++ b/app/views/organisation-notification-enabled.html
@@ -36,7 +36,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <div class="govuk-success-summary" role="alert" aria-labelledby="success-summary-heading" tabindex="-1" data-module="govuk-error-summary" data-ga-event-form="success">
-        <h3 class="govuk-success-summary__title" id="success-summary-heading">Email notification preferences for jesse.yuen@education.gov.uk have been saved.</h3>
+        <h3 class="govuk-success-summary__title" id="success-summary-heading">Email notification preferences for name@address.org have been updated.</h3>
       </div>
     </div>
   </div>
