--- a/app/views/notifications-multi-org.html
+++ b/app/views/notifications-multi-org.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form action="/" method="post" class="form">
+    <form action="/organisation-notification-enabled" method="post" class="form">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
@@ -29,7 +29,7 @@
           name: "notifications",
           fieldset: {
             legend: {
-              text: "Which organisations would you like to receive email notifications about?",
+              text: "Who would you like to receive email notifications about?",
               classes: "govuk-fieldset__legend--l govuk-!-margin-bottom-6"
             }
           },
