--- a/app/views/users/invite-user.html
+++ b/app/views/users/invite-user.html
@@ -17,7 +17,7 @@
     {% endif %}
   {% endset %}
 
-  {{ macros.orgHeading('Invite user', message) }}
+  {{ message | safe }}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
